--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Vim temp
+*.swp
+
 # Logs
 logs
 *.log
@@ -35,3 +38,10 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# SASS cache
+.sass-cache
+
+# SASS output
+*.css
+*.css.map
