--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ coverage
 build/Release
 
 # Dependency directories
-node_modules
+##node_modules
 jspm_packages
 
 # Optional npm cache directory
@@ -43,5 +43,5 @@ jspm_packages
 .sass-cache
 
 # SASS output
-*.css
-*.css.map
+##*.css
+##*.css.map
