--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/WorldMaker/lcars-moderne#readme",
   "dependencies": {
-    "bulma": "0.0.28"
+    "bulma": "^0.8.2",
+    "sass": "^1.52.3"
   }
 }
