--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "node build.cjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Nothing to test\""
   },
   "repository": {
     "type": "git",
